<resources>
    <string name="app_name">Project MA Simulation 1</string>

    <string name="placeholder_email">Email Address</string>
    <string name="placeholder_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="cont_desc_friend_image">friend image</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_origin">Origin</string>
    <string name="back_to_home_screen">back to home screen</string>
    <string name="log_out">Log out</string>
    <string name="error_empty_email">Email address cannot empty</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_empty_password">Password cannot empty</string>
    <string name="error_insufficient_password">Password must contain at least 8 character</string>
    <string name="error_weak_password">Password must contain uppercase letter, lowercase letter and number digit</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_friend">Add Friend</string>
    <string name="placeholder_phone_number">Phone Number</string>
    <string name="add_friend_photo">add friend photo</string>
    <string name="cont_desc_new_friend_photo">New friend photo</string>
    <string name="cont_desc_add_new_friend">add new friend</string>
    <string name="request_camera_title">Request access camera</string>
    <string name="request_camera_desc">In order to get picture, you have to grant camera permission for this application</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="okay">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="uploading">Uploading…</string>
    <string name="upload_complete">Upload completed</string>
    <string name="error_upload_failed">Upload failed</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_sign_up_failed">Sign up failed</string>
</resources>