<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friendship.addfriend.AddFriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back_to_home_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_circle"
            android:contentDescription="@string/back_to_home_screen"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_new_friend"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/cont_desc_new_friend_photo"
            android:src="@drawable/item_friend_img_placeholder"
            android:text="@string/add_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_new_friend_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_friend_photo"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@id/img_new_friend"
            app:layout_constraintEnd_toEndOf="@id/img_new_friend"
            app:layout_constraintTop_toTopOf="@id/img_new_friend"
            app:layout_constraintVertical_bias="1"
            app:tint="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="@id/img_new_friend"
            app:layout_constraintStart_toStartOf="@id/img_new_friend"
            app:layout_constraintTop_toBottomOf="@id/img_new_friend">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_friend_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_friend_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/tf_friend_name"
            app:layout_constraintStart_toStartOf="@id/tf_friend_name"
            app:layout_constraintTop_toBottomOf="@id/tf_friend_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_friend_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_phone_number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_friend_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/tf_friend_phone_number"
            app:layout_constraintStart_toStartOf="@id/tf_friend_phone_number"
            app:layout_constraintTop_toBottomOf="@id/tf_friend_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_friend_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_origin"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_new_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_friend"
            app:layout_constraintTop_toBottomOf="@id/tf_friend_origin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>