<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/app_logo"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginTop="96dp"
            android:background="@android:color/holo_red_light"
            app:layout_constraintBottom_toTopOf="@id/tf_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="56dp"
            app:layout_constraintBottom_toTopOf="@id/tf_password"
            app:layout_constraintEnd_toEndOf="@id/app_logo"
            app:layout_constraintStart_toStartOf="@id/app_logo"
            app:layout_constraintTop_toBottomOf="@id/app_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"
            app:layout_constraintEnd_toEndOf="@id/tf_email"
            app:layout_constraintStart_toStartOf="@id/tf_email"
            app:layout_constraintTop_toBottomOf="@id/tf_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/tf_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/tf_password"
            app:layout_constraintTop_toBottomOf="@id/tf_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/tv_don_t_have_account"
            app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@id/tv_forgot_password"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <TextView
            android:id="@+id/tv_don_t_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_to_sign_up_screen"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_to_sign_up_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@id/tv_don_t_have_account"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toEndOf="@id/tv_don_t_have_account"
            app:layout_constraintTop_toTopOf="@id/tv_don_t_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>