<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@id/tf_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toTopOf="@id/tf_password"
            app:layout_constraintEnd_toEndOf="@id/tv_sign_up"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/tf_user_name"
            app:layout_constraintEnd_toEndOf="@id/tf_email"
            app:layout_constraintStart_toStartOf="@id/tf_email"
            app:layout_constraintTop_toBottomOf="@id/tf_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/tf_user_date_birth"
            app:layout_constraintEnd_toEndOf="@id/tf_password"
            app:layout_constraintStart_toStartOf="@id/tf_password"
            app:layout_constraintTop_toBottomOf="@id/tf_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_user_date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/tf_user_origin_province"
            app:layout_constraintEnd_toEndOf="@id/tf_user_name"
            app:layout_constraintStart_toStartOf="@id/tf_user_name"
            app:layout_constraintTop_toBottomOf="@id/tf_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_birth_date"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_user_origin_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@id/tf_user_date_birth"
            app:layout_constraintStart_toStartOf="@id/tf_user_date_birth"
            app:layout_constraintTop_toBottomOf="@id/tf_user_date_birth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_origin_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_origin"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@id/tv_don_t_have_account"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@id/tf_user_origin_province" />

        <TextView
            android:id="@+id/tv_don_t_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_to_login_screen"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

        <TextView
            android:id="@+id/tv_to_login_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@id/tv_don_t_have_account"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toEndOf="@id/tv_don_t_have_account"
            app:layout_constraintTop_toTopOf="@id/tv_don_t_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>